# CUDA_3D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp  test_color_icp.cpp
include/: device.hpp  image_container.hpp  realsense_device.hpp  type.hpp
scripts/: helper.py  helper.sh
src/: CMakeLists.txt  device.cpp
src/camera/: camera_device.hpp  camera_param.hpp  realsense_device.cpp  realsense_device.hpp
src/cuda/: CMakeLists.txt  cuda_align.cu  cuda_point_cloud.cu  cuda_point_cloud.cuh  cuda_util.cu  cuda_util.cuh
src/cuda_container/: cuda_camera_param_container.cu  cuda_color_frame_container.cu  cuda_container.cu  cuda_container.cuh  cuda_container.hpp  cuda_depth_frame_container.cu  cuda_frame.cuh
src/devices/: CMakeLists.txt  device.hpp  realsense_device.cpp  realsense_device.hpp
src/geometry/: cuda_clustering.cu  cuda_clustering.cuh  cuda_estimate_normals.cu  cuda_estimate_normals.cuh  cuda_grid_radius_outliers_removal.cu  cuda_grid_radius_outliers_removal.cuh  cuda_nn_search.cu  cuda_nn_search.cuh  cuda_point_cloud.cu  cuda_point_cloud.cuh  cuda_point_cloud_factory.cu  cuda_point_cloud_factory.cuh  cuda_voxel_grid_down_sample.cu  cuda_voxel_grid_down_sample.cuh  geometry_util.cuh  grid_knn.cu  point_cloud.cu  point_cloud.hpp  type.hpp
src/movement_detection/: cuda_movement_detection.cu  cuda_movement_detection.cuh  movement_detection.cu  movement_detection.hpp
src/registration/: color_icp.cu  color_icp.hpp  cuda_color_icp_build_least_square.cu  cuda_color_icp_build_least_square.cuh  cuda_compute_color_gradient.cu  cuda_compute_color_gradient.cuh  eigen_solver.cpp  eigen_solver.hpp
src/util/: console_color.hpp  cuda_util.cuh  eigen_disable_bad_warnings.hpp  fast_eigen_val_vec.cuh  gpu_check.cu  gpu_check.hpp  little_3x3_ldlt_solve.cuh  math.cuh  numeric.cuh
src/visualizer/: visualizer.cpp  visualizer.hpp
